--- a/src/DirectoryNavigator/appsettings.json
+++ b/src/DirectoryNavigator/appsettings.json
@@ -11,15 +11,16 @@
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
           "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "logs/.log",
-          "rollingInterval": "Day",
-          "outputTemplate": "[{Timestamp:dd/MM/yyyy HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
-        }
       }
+      //,
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "logs/.log",
+      //    "rollingInterval": "Day",
+      //    "outputTemplate": "[{Timestamp:dd/MM/yyyy HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+      //  }
+      //}
     ]
   }
 }
